--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,13 +8,14 @@
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.vscode": "1.1.2",
+    "com.unity.probuilder": "4.1.0",
     "com.unity.purchasing": "2.0.6",
-    "com.unity.render-pipelines.lightweight": "7.1.1",
+    "com.unity.render-pipelines.core": "7.1.2",
+    "com.unity.render-pipelines.lightweight": "7.1.2",
     "com.unity.test-framework": "1.1.3",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.oculus.standalone": "1.38.3",
     "com.unity.xr.openvr.standalone": "1.0.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
